manifest/objects/L2O_Post_sale_Broadcast__e.object
<CustomObject>
    <fields>
        <fullName>L2O_Account_Billing_City__c</fullName>
        <label>Account Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Billing_Country__c</fullName>
        <label>Account Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Billing_Postal_Code__c</fullName>
        <label>Account Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Billing_State__c</fullName>
        <label>Account Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Billing_Street__c</fullName>
        <label>Account Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_GUID__c</fullName>
        <label>Account GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Shipping_City__c</fullName>
        <label>Account Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Shipping_Country__c</fullName>
        <label>Account Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Shipping_Postal_Code__c</fullName>
        <label>Account Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Shipping_State__c</fullName>
        <label>Account Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Shipping_Street__c</fullName>
        <label>Account Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Client_Update_Indicator__c</fullName>
        <label>Client Update Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_GUID__c</fullName>
        <label>Contract GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <label>Order GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Opportunity_GUID__c</fullName>
        <label>Initial Opportunity GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Order_Products_Activated__c</fullName>
        <description>To store total number of Activated Order Product related to Order</description>
        <label># of Order Products Activated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Order_Products__c</fullName>
        <description>To store total number of Order Product related to Order</description>
        <label># of Order Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_GUID__c</fullName>
        <label>Opportunity GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Bill_To_Contact_Email_Address__c</fullName>
        <label>Order Bill To Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Bill_To_Contact_GUID__c</fullName>
        <label>Order Bill To Contact GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Bill_To_Contact_Name__c</fullName>
        <label>Order Bill To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Bill_To_Contact__c</fullName>
        <label>Order Bill To Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Billing_City__c</fullName>
        <label>Order Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Billing_Country__c</fullName>
        <label>Order Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Billing_Postal_Code__c</fullName>
        <label>Order Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Billing_State__c</fullName>
        <label>Order Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Billing_Street__c</fullName>
        <label>Order Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Effective_Date__c</fullName>
        <label>Order Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Order_End_Date__c</fullName>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Indicator__c</fullName>
        <label>Order Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_PO_Number__c</fullName>
        <label>Order PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Payment_Terms__c</fullName>
        <label>Order Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Ship_To_Contact_Email_Address__c</fullName>
        <label>Order Ship To Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Ship_To_Contact_GUID__c</fullName>
        <label>Order Ship To Contact GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Ship_To_Contact_Name__c</fullName>
        <label>Order Ship To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Order_Ship_To_Contact__c</fullName>
        <label>Order Ship To Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Post-sale Broadcast</label>
    <pluralLabel>Post-sale Broadcasts</pluralLabel>
</CustomObject>